--- a/pages/album/album.wxml
+++ b/pages/album/album.wxml
@@ -22,15 +22,24 @@
 					</view>
 				</block>
 
-				<block wx:elif="{{item}}">
+				<block wx:elif="{{item.type==undefined&&item!=0}}">
 					<image lazy-load="true" bindtap="enterPreviewMode" bindlongpress="showActions" data-src="{{item}}" class="album-item" src="{{item+'!preview'}}" mode="aspectFill"></image>
 				</block>
 
-				<block wx:elif="{{item===0 && group[cellIndex-1] && marker!=0}}">
+				<block wx:elif="{{item.type==='next'}}">
 					<view class="upload-add-outer">
 						<view class="upload-add" bindtap="nextPage">
 							<image src="/images/next.gif" mode="aspectFit"></image>
 							<text>下一页</text>
+						</view>
+					</view>
+				</block>
+
+				<block wx:elif="{{item.type==='done'}}">
+					<view class="upload-add-outer">
+						<view class="upload-add">
+							<image src="/images/done.png" mode="aspectFit"></image>
+							<text>没有更多图片</text>
 						</view>
 					</view>
 				</block>
