--- a/pages/album/album.wxss
+++ b/pages/album/album.wxss
@@ -78,7 +78,7 @@
     left: 0;
     width: 240rpx;
     height: 2.6rem;
-    top: 1.2rem;
+    top: 1.5rem;
 }
 
 .upload-add text {
@@ -86,7 +86,16 @@
     width: 240rpx;
     height: 2rem;
     left: 0;
-    top: 1.6rem;
+    top: 1.8rem;
+    color: #888;
+}
+
+.tips {
+    position: absolute;
+    width: 240rpx;
+    left: 0;
+    top: -2.4rem;
+    font-size: 24rpx;
     color: #888;
 }
 
@@ -127,7 +136,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background: #000;
+    background: #272f32;
 }
 
 .swiper-container image {
@@ -137,4 +146,48 @@
 
 action-sheet-item.warn {
     color: #e64340;
+}
+
+/* navigationBar.wxss */
+.navigation-container {
+    position: absolute;
+    width: 100%;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    background-color: #9dbdc6;
+}
+
+.navigation-bar {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.navigation-buttons {
+    position: absolute;
+    align-items: center;
+    top: 24rpx;
+    left: 30rpx;
+    background-color: transparent;
+}
+
+.nav-img {
+    height: 24px;
+    width: 15px;
+}
+
+.navigation-title {
+    position: absolute;
+    left: 104rpx;
+    right: 104rpx;
+    top: 5rpx;
+    text-align: center;
+    font-size: 17px;
+    font-weight: bold;
+    color: #272f32;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
