--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -23,8 +23,8 @@
   width: 100%;
   height: 85rpx;
   line-height: 85rpx;
-  background-color: #fff;
-  color: #2277da;
+  background-color: #eff3f5;
+  color: #f5756c;
   line-height: 85rpx;
 }
 
