--- a/pages/album/album.wxml
+++ b/pages/album/album.wxml
@@ -77,6 +77,7 @@
 </swiper>
 
 <action-sheet hidden="{{!showActionsSheet}}" bindchange="hideActionSheet">
+	<action-sheet-item wx:if="{{!previewMode}}" bindtap="goTop">返回顶部</action-sheet-item>
 	<action-sheet-item bindtap="copyLink">复制图片链接</action-sheet-item>
 	<action-sheet-item bindtap="downloadImage">保存到本地</action-sheet-item>
 	<!-- <action-sheet-item class="warn" bindtap="deleteImage">删除图片</action-sheet-item> -->
@@ -87,6 +88,6 @@
 <toast hidden="{{!showToast}}" duration="1000" bindchange="hideToast">{{toastMessage}}</toast>
 
 <mp-dialog title="返回首页" show="{{back}}" bindbuttontap="confirmBack" buttons="{{[{text: '取消'}, {text: '确认'}]}}">
-	<image src="/images/done.png" style="width:50px;height:50px;"/>
+	<image src="/images/done.png" style="width:50px;height:50px;" />
 	<view>真的要回去吗？</view>
 </mp-dialog>
