--- a/pages/album/album.wxml
+++ b/pages/album/album.wxml
@@ -1,3 +1,4 @@
+<canvas canvas-id='canvas' style="width:{{cWidth}}px;height:{{cHeight}}px;"></canvas>
 <view class="navigation-container" style="{{'height: ' + navigationBarAndStatusBarHeight}}">
 	<!--空白来占位状态栏-->
 	<view style="{{'height: ' + statusBarHeight}}"></view>
@@ -87,7 +88,7 @@
 <loading hidden="{{!showLoading}}" bindchange="hideLoading">{{loadingMessage}}</loading>
 <toast hidden="{{!showToast}}" duration="1000" bindchange="hideToast">{{toastMessage}}</toast>
 
-<mp-dialog title="返回首页" show="{{back}}" bindbuttontap="confirmBack()" buttons="{{[{text: '取消'}, {text: '确认'}]}}">
+<mp-dialog title="返回首页" show="{{back}}" bindbuttontap="confirmBack" buttons="{{[{text: '取消'}, {text: '确认'}]}}">
 	<image src="/images/done.png" style="width:50px;height:50px;" />
 	<view>真的要回去吗？</view>
 </mp-dialog>
