--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -8,13 +8,13 @@
 <view class="bottom"></view>
 <view class="main">
 	<view class="page-title">文件上传</view>
-	<view class="page-tips1">CDN流量仅有10G</view>
+	<view class="page-tips1">不可上传违规资源</view>
 	<view class="page-btn-wrap">
 		<button class="page-btn" bindtap="uploadImage">上传图片</button>
 		<button class="page-btn" bindtap="uploadVideo">上传视频</button>
 	</view>
 	<view class="page-title">云相册</view>
-	<view class="page-tips1">图片预览均缩放+裁剪，下载为原尺寸</view>
+	<view class="page-tips1">图片预览均经缩放+裁剪，下载后为原尺寸</view>
 	<view class="page-btn-wrap">
 		<button class="page-btn" bindtap="gotoAlbum">云相册</button>
 	</view>
