--- a/pages/album/uploader/uploader.wxss
+++ b/pages/album/uploader/uploader.wxss
@@ -10,3 +10,18 @@
   bottom: 30rpx;
   padding: 10rpx 22rpx;
 }
+
+.upload-tips {
+  position: absolute;
+  bottom: 300rpx;
+  width: 100%;
+  padding-left: 30rpx;
+}
+
+.upload-folder {
+  color: #888;
+  display: block;
+  font-size: 30rpx;
+  height: 80rpx;
+  line-height: 80rpx;
+}
